--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-motion-animate": "^1.0.6",
+    "react-spinners": "^0.13.8",
     "stripe": "^14.5.0",
     "swiper": "^11.0.5"
   }
