--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Matt Bugucam",
   "license": "MIT",
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
     "bootstrap": "^5.3.2",
@@ -26,6 +27,7 @@
     "react-icons": "^4.12.0",
     "react-motion-animate": "^1.0.6",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "stripe": "^14.5.0",
     "swiper": "^11.0.5"
   }
