--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.23.0",
     "react-dom": "^18",
+    "react-facebook": "^9.0.12",
     "react-icons": "^4.12.0",
     "react-motion-animate": "^1.0.6",
     "react-spinners": "^0.13.8",
