--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emailjs/browser": "^3.11.0",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
+    "@vercel/analytics": "^1.1.1",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
     "mongodb": "^6.3.0",
