--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^2.2.0",
     "@vercel/analytics": "^1.1.1",
     "bootstrap": "^5.3.2",
+    "date-fns": "^3.0.6",
     "dotenv": "^16.3.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
