--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "next": "14.0.3",
+    "nodemailer": "^7.0.9",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.23.0",
