--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "stripe": "^14.5.0",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "twilio": "^5.10.3"
   }
 }
